Update description and OG tags

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: OneStop
 description: >-
-  An easy way to grocery shop
-url: https://www.param.me/onestopshop
+  Your grocery shopping buddy
+url: https://1stopshop.xyz
 
 # Build settings
 sass:
