--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: OneStop
 description: >-
   Your grocery shopping buddy
-url: https://1stopshop.xyz
+url: https://www.param.me/onestopshop
 
 # Build settings
 sass:
